[package]
name = "chemistry_consts"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library for most constants in chemistry"
repository = "https://github.com/um-univie/chemistry_consts/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
lazy_static = "1.4.0"
phf = {version="0.11.2", features=["macros"]}
